--- a/council_finance/templates/council_finance/counter_definition_list.html
+++ b/council_finance/templates/council_finance/counter_definition_list.html
@@ -276,6 +276,14 @@
                     </svg>
                     Group
                   </a>
+                  <a href="{% url 'counter_factoid_assignment' counter.slug %}" 
+                     class="inline-flex items-center px-2.5 py-1.5 border border-transparent text-xs font-medium rounded text-orange-700 bg-orange-100 hover:bg-orange-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500"
+                     title="Assign factoid templates to this counter">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"></path>
+                    </svg>
+                    Factoids
+                  </a>
                   {% if request.user.is_superuser or counter.created_by == request.user %}
                   <a href="{% url 'counter_delete' counter.slug %}" 
                      onclick="return confirm('Are you sure you want to delete {{ counter.name }}? This action cannot be undone.')"
